<resources>
    <string name="gps_disable_message">"GPS está desabilitado, favor habilitar para que seja possível orientá-lo no campus"</string>
    <string name="qr_code_button_text">QR Code</string>
    <string name="read_qr_code_button_text">Ler QR Code</string>
    <string name="puc_aberta_map_button_text">Abrir Mapa Puc Aberta</string>
    <string name="continuar_button_text">Continuar</string>
    <string name="geolocation_button_text">Entendi</string>
    <string name="location_button_text">Geolocalização</string>
    <string name="register_screen_confirmation_text">Confirme sua presença utilizando uma das opções abaixo:</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="register_screen_confirmation_success_title">Bem vindo ao Puc Aberta 2023</string>
    <string name="register_screen_confirmation_success_description">Confirmação realizada com sucesso.</string>
    <string name="register_screen_confirmation_error_title">Ops!</string>
    <string name="register_screen_confirmation_error_desciption">Não foi possível confirmar sua presençã. Por favor tente novamente.</string>
    <string name="qr_code_error_desciption">Não foi possível fazer leitura do Qr Code. Tente Novamente</string>
    <string name="qr_code_register_hint_description">Posicione o Qr Code disponível na "Recepção" dentro da área demarcada.\nAssim que estiver pronto clique no botão\n"Ler QR Code"</string>
    <string name="geo_register_hint_description">Fique uma distância de até 100 metros do local da "Recepção" para confirmar sua presença."</string>
    <string name="qr_code_hint_description">Posicione o Qr Code dentro da área demarcada.\nAssim que estiver pronto clique no botão\n"Ler QR Code"</string>
    <string name="qr_code">Qr Code</string>
    <string name="qr_code_available_description">Qr Code Disponível. Clique para scanear</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="events">Programação</string>
    <string name="congratulations">Parabéns!\nVocê completou o desafio Puc Aberta 2023</string>
    <string name="congratulations_description">Diriga-se até oficina do grupo cadastrado que se encontra na "Feira de Cursos" para receber sua recompensa!</string>
    <string name="gift_avaiable">Recompensa disponível</string>
    <string name="programming_title">Minha Programação</string>
    <string name="complete_programming_title">Programação Completa</string>
    <string name="instituto">Mundo PUC Minas</string>
    <string name="tour_virtual">Tour Virtual</string>
</resources>