<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MapActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/clBottomMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:background="@android:color/darker_gray" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardScoreBoard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actvScoreTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/scoreboard"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/scoreSeekBar"
                app:layout_constraintTop_toTopOf="parent" />

            <pucaberta.pucminas.core.components.RangeSeekBarView
                android:id="@+id/scoreSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:barHeight="15dp"
                app:baseColor="@color/gray100"
                app:circleFillColor="@color/primaryColor"
                app:circleRadius="15dp"
                app:circleTextColor="@color/white"
                app:circleTextSize="14sp"
                app:fillColor="@color/accentColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actvScoreTitle"
                app:maxValue="3"
                app:minValue="0"
                app:orientation="LEFT_TO_RIGHT"
                app:stepValue="1"
                tools:currentValue="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_shape_stroke"
                android:gravity="center"
                android:textSize="16sp"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintBottom_toBottomOf="@id/scoreSeekBar"
                app:layout_constraintStart_toStartOf="@id/scoreSeekBar"
                app:layout_constraintTop_toTopOf="@id/scoreSeekBar"
                tools:text="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@drawable/shadow_bottom_to_top"
        app:layout_constraintBottom_toTopOf="@id/clBottomMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomMenu"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actvEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/event_available"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:text="@string/events"
        android:textColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clButton"
        app:layout_constraintTop_toTopOf="@id/clBottomMenu" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actvPuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/school"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:text="@string/instituto"
        android:textColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/clBottomMenu" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/event_available"
        android:drawableTint="@color/primaryColor"
        android:gravity="center"
        android:text="@string/qr_code"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/clBottomMenu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/circle_shadown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieGift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/qr_code_lottie_small" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/lottieGift"
            app:layout_constraintEnd_toEndOf="@id/lottieGift"
            app:layout_constraintStart_toStartOf="@id/lottieGift"
            app:layout_constraintTop_toTopOf="@id/lottieGift"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/fireworks_lottie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/clBottomMenu"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/vrImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vr_icon_com" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tour_virtual"
                android:textColor="@color/primaryColor"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vrImage"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>